# LiSanMath.Experiment

./: .gitignore  LICENSE  LiSanMath.Experiment.sln  SchoolCourse.Experiment.sln
ComputerOSIntro/school_courses/: CMakeLists.txt  Makefile  Test1  Test1_Ex  Test2  Test3  Test4
ComputerOSIntro/school_courses/test_1/: test_1.cpp
ComputerOSIntro/school_courses/test_1_ex/: test_1.cpp
ComputerOSIntro/school_courses/test_2/: test_2.cpp
ComputerOSIntro/school_courses/test_3/: test_3.cpp
ComputerOSIntro/school_courses/test_4/: test_4.cpp
LiSanMath.Experiment/: Program.cs  Token.cs  TokenChain.cs  TokenPart.cs  Tokenizer.cs
NumCal.App/: EquationSolver.cs  LUExtraction.cs  NewtonInterpolation.cs  NewtonMethod.cs  NumCal.App.csproj  PivotingGaussianEliminator.cs  Program.cs  RombergIntegration.cs
SetCalculator/: Program.cs
